--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "一个基于 Electron 和 Vue3 的简单浏览器客户端",
   "main": "src/main/main.js",
   "scripts": {
-    "dev": "concurrently \"npm run dev:vue\" \"wait-on http://127.0.0.1:5173 && cross-env NODE_ENV=development electron .\"",
-    "dev:debug": "node scripts/dev.js",
-    "dev:simple": "node scripts/simple-dev.js",
+    "dev": "node scripts/simple-dev.js",
     "dev:vue": "vite",
     "build": "vite build",
     "build:win": "npm run build && electron-builder --win",
@@ -27,14 +25,11 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.21",
-    "concurrently": "^7.6.0",
-    "cross-env": "^7.0.3",
     "electron": "^22.3.0",
     "electron-builder": "^23.6.0",
     "postcss": "^8.5.6",
     "sass": "^1.89.2",
-    "vite": "^4.5.0",
-    "wait-on": "^7.0.0"
+    "vite": "^4.5.0"
   },
   "dependencies": {
     "vue": "^3.3.8"
