更新项目名称为“鸡米花浏览器”，修改相关文档和界面文本以反映新品牌形象；调整图标和描述，提升整体用户体验和视觉效果。

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stellar-browser",
   "version": "1.0.0",
-  "description": "星辰浏览器 - 为现代用户打造的智能浏览体验",
+  "description": "鸡米花浏览器 - 为现代用户打造的智能浏览体验",
   "main": "src/main/main.js",
   "scripts": {
     "dev": "node scripts/simple-dev.js",
@@ -38,7 +38,8 @@
   },
   "build": {
     "appId": "com.stellarbrowser.app",
-    "productName": "星辰浏览器",
+    "productName": "鸡米花浏览器",
+    "icon": "public/icon.jpg",
     "directories": {
       "output": "dist"
     },
